[gd_scene load_steps=2 format=3 uid="uid://j42kx7ta552u"]

[ext_resource type="Script" uid="uid://dgkvt50bmwx5k" path="res://Weapons/Ranged/ranged_weapon_controller.gd" id="1_htguo"]

[node name="RangedWeaponController" type="Node3D"]
script = ExtResource("1_htguo")

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Reload" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
